Add pagination for searchPostByTitleWithQueryMethod and searchPostByTitle APIs